# crooked_tree_greens

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml  pages.yml
courses/crooked_tree/: course.toml
courses/crooked_tree/polygons/: course.geojson  greens.geojson  hole_lines.geojson
courses/crooked_tree/reports/: digitize_map.html  greens_overview.html  qc_report.md
courses/starr_pass/: course.toml
courses/starr_pass/polygons/: course.geojson  greens.geojson  hole_lines.geojson
courses/starr_pass/reports/: greens_overview.html  qc_report.md
data/polygons/: greens.geojson  greens_manual.geojson  hole_lines.geojson
data/polygons/cache/: nominatim_course.json  overpass_b652bb8014b9fdb7.json
outputs/greens/: index.json
outputs/greens/hole_01/: heightmap.npz  meta.json  pin_zones.geojson  pin_zones.npz  pin_zones.tif
outputs/greens/hole_02/: heightmap.npz  mesh.glb  meta.json
outputs/greens/hole_03/: heightmap.npz  heightmap.tif  mesh.glb  meta.json  pin_zones.tif
outputs/greens/hole_04/: heightmap.npz  heightmap.tif  meta.json  pin_zones.npz
outputs/greens/hole_05/: heightmap.npz  heightmap.tif  meta.json  pin_zones.geojson  (+2 more)
reports/: greens_overview.html  qc_report.md
scripts/: 00_env_check.py  10_green_polygons.py  20_fetch_lidar.py  30_clip_clean.py  40_fit_surface.py  45_pin_zones.py  50_export.py  60_report.py  70_site.py
tests/: conftest.py  test_clip.py  test_e2e.py  test_export.py  test_fetch.py  test_fit.py  test_pin_zones.py  test_polygons.py  test_repo_integrity.py  test_report.py  test_site.py
(+526 files in other folders)
