[project]
name = "crooked-tree-greens"
version = "0.1.0"
description = "LiDAR-derived 3D surface models of Crooked Tree Golf Course putting greens"
requires-python = ">=3.13"
dependencies = [
    "folium>=0.20.0",
    "laspy[lazrs]>=2.7.0",
    "matplotlib>=3.11.0",
    "numpy>=2.5.1",
    "pyproj>=3.7.2",
    "rasterio>=1.5.0",
    "requests>=2.34.2",
    "scipy>=1.18.0",
    "shapely>=2.1.2",
    "trimesh>=4.12.2",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "ruff>=0.15.21",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
markers = [
    "slow: full-fidelity end-to-end pipeline runs (deselect with -m 'not slow')",
]

[tool.ruff]
line-length = 110

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "W", "I", "B", "UP", "NPY"]
